# DemocrattyBot

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
__mocks__/: discord.js  discord.js-commando  discord.ts
__tests__/: commando.list.test.js  commando.list.test.ts  player.js  player.test.js
built/: list.js  play.js  stop.js
commands/youtube/: list.js  play.js  stop.js
examples/01_serenity_setup/: Cargo.toml
examples/02_songbird_setup/: Cargo.toml
examples/02_songbird_setup/src/: main.rs
libs/: player.js
src/: error_handling.rs  handlers.rs  main.rs  pause.rs  ping.rs  play.rs  queue.rs
test/: player.js  test.js
